<resources>
    <string name="app_name" translatable="false">Vitae</string>
    <string name="google_maps_key">AIzaSyBYZ-Q4nV_LikYha2nDKiSlEFC2Kb0q92k</string>
    <string name="no_internet_connection">İnternet bağlantınız çok yavaş veya bağlantınız kopmuş gibi görünüyor.</string>
    <string name="health_tree_creating">Sağlık ağacını oluşturuyoruz!</string>
    <string name="health_tree_is_empty">Sağlık ağacın bomboş, bu çok iyi bir haber. Fakat bizimle sağlığınla ilgili gelişmeleri paylaşabilirsin</string>
    <string name="save">Kaydet</string>
    <string name="disease_succesfull_saved">Hastalık sağlık ağacınıza eklendi.</string>
    <string name="treatment_succesfull_saved">Tedavi sağlık ağacınıza eklendi.</string>
    <string name="drug_succesfull_saved">İlaç sağlık ağacınıza eklendi.</string>
    <string name="something_went_wrong">Birşeyler ters gitti lütfen daha sonra tekrar deneyiniz.</string>
    <string name="please_select_disease">Lütfen bir hastalık seçiniz</string>
    <string name="please_select_treatment">Lütfen bir tedavi seçiniz</string>
    <string name="please_select_drug">Lütfen bir ilaç seçiniz</string>
    <string name="disease_start_date">Hastalık Başlangıç Tarihi</string>
    <string name="treatment_start_date">Tedavi Başlangıç Tarihi</string>
    <string name="drug_start_date">İlaç Başlangıç Tarihi</string>
    <string name="treatments">Tedaviler</string>
    <string name="drugs">İlaçlar</string>
    <string name="patient">Hasta</string>
    <string name="doctor">Doktor</string>
    <string name="hospital">Hastane</string>
    <string name="personal_info">Kişisel Bilgiler</string>
    <string name="professional_info">Profesyonel Bilgiler</string>
    <string name="check_all_fields">Lütfen bütün alanların doldurulmuş olduğundan emin olduktan sonra tekrar dene.</string>
    <string name="doctor_branch">Uzmanlık Alanı</string>
    <string name="doctor_signup_description">Uygulamada diğer kullanıcıların veri güvenliği için çalıştığın hastanenin bilgisine ihtiyacımız var.
        Kayıt aşamasından sonra seçtiğin hastaneye bilgini teyit etmek için onay bildirimi göndereceğiz. Seçtiğin hastanenin sizi doktoru olarak
        teyit etmesinden sonra uygulamanın onaylı doktorlarından olabileceksin.</string>
    <string name="sign_in">Giriş Yap</string>
    <string name="login_succesfull">Kullanıcı giriş işlemi başarılı</string>
    <string name="login_unsuccesfull">Lütfen girdiğiniz bilgileri kontrol ederek tekrar deneyiniz </string>
    <string name="login_authenticating">Giriş kimlik doğrulaması yapıyor</string>
    <string name="create_account">Hesap Oluştur</string>
    <string name="email">Email Adresi</string>
    <string name="password">Şifre</string>
    <string name="password_again">Şifre(Tekrar)</string>
    <string name="first_name">Ad</string>
    <string name="last_name">Soyad</string>
    <string name="user_id">Kullanıcı Adı</string>
    <string name="forward">İleri</string>
    <string name="gender">Cinsiyet</string>
    <string name="male">erkek</string>
    <string name="female">bayan</string>
    <string name="undefined">belirtilmiyor</string>
    <string name="blood_type">Kan Tipi</string>
    <string name="birthday">Doğum Günü</string>
    <string name="user_succeffully_created">Kullanıcı hesabı başarıyla oluşturuldu.</string>
    <string name="user_cannot_created">Kullanıcı oluşturulamadı.</string>
    <string name="edit">Düzenle</string>
    <string name="add">Ekle</string>
    <string name="welcome">Vitae\'ye hoş geldin!</string>
    <string name="tell_us_about_you">Bize biraz kendinden bahset</string>
    <string name="unknown_phase">Bilinmiyor</string>
    <string name="diagnosis_phase">Teşhis</string>
    <string name="progression_phase">İlerleme</string>
    <string name="stabile_phase">Durgun</string>
    <string name="lysis_phase">Gerileme</string>
    <string name="recurrence_phase">Tekrarlama</string>
    <string name="healing_phase">İyileşme</string>
    <string name="at_beginning">Başlangıç</string>
    <string name="preliminary">Hafif</string>
    <string name="moderate">Orta</string>
    <string name="heavy">Ağır</string>
    <string name="severe">İleri</string>
    <string name="navigation_item_profile">Profil</string>
    <string name="navigation_item_timeline">Akış</string>
    <string name="navigation_item_messages">Mesajlar</string>
    <string-array name="nav_drawer_labels">
        <item>@string/navigation_item_timeline</item>
        <item>@string/navigation_item_messages</item>
        <item>@string/navigation_item_profile</item>
    </string-array>
    <string name="my_health_tree">Sağlık Ağacım</string>
    <string name="my_disease_history">Hastalık Geçmişi</string>
    <string name="my_drug_history">İlaç Geçmişi</string>
    <string name="my_treathment_history">Tedavi Geçmişi</string>
    <string name="total_medicine_count">TOPLAM İLAÇ</string>
    <string name="succes_story">Başarı Hikayesi</string>
    <string name="health_journey">Sağlık Yolculuğu</string>
    <string name="disease">Hastalık</string>
    <string name="treatment">Tedavi</string>
    <string name="drug">İlaç</string>
    <string name="my_diseases">Hastalıklarım</string>
    <string name="state_of_disease">Güncel Durum</string>
    <string name="level_of_disease">Güncel Seviye</string>
    <string-array name="disease_state_array">
        <item>@string/unknown_phase</item>
        <item>@string/diagnosis_phase</item>
        <item>@string/progression_phase</item>
        <item>@string/stabile_phase</item>
        <item>@string/lysis_phase</item>
        <item>@string/recurrence_phase</item>
        <item>@string/healing_phase</item>
    </string-array>
    <string-array name="disease_level_array">
        <item>@string/unknown_phase</item>
        <item>@string/at_beginning</item>
        <item>@string/preliminary</item>
        <item>@string/moderate</item>
        <item>@string/heavy</item>
        <item>@string/severe</item>
    </string-array>
    <string name="my_treatments">Tedavilerim</string>
    <string name="my_drugs">İlaçlarım</string>
    <string name="drug_cell_welcome">VITAE\' kayıtlı bir ilaç kullanımınız bulunmamaktadır.</string>
    <string name="send">Gönder</string>
    <string name="shareSomething">Bir şeyler paylaş...</string>
    <string name="like">Beğen</string>
    <string name="comment">Yorum Yap</string>
    <string name="like_count">Beğeni</string>
    <string name="comment_count">Yorum</string>
    <string name="edit_profile">Profili Düzenle</string>
    <string name="follow">Takip Et</string>
    <string name="unfollow">Takibi Bırak</string>
    <string name="followIsNotSuccesfull">Kullanıcı takibi bırakılamadı. Lütfen daha sonra tekrar deneyiniz</string>
    <string name="unfollowIsNotSuccesfull">Kullanıcı takip edilemedi. Lütfen daha sonra tekrar deneyiniz</string>
    <string name="profile_picture">profil resmi</string>
    <string name="photo_upload_succesfull">Fotoğraf başarıyla yüklendi</string>
    <string name="photo_download_unsuccesfull">Fotoğraf başaroyla indirildi</string>
    <string name="profile_photo_upload_succesfull">Profil resminiz başarıyla yüklendi</string>
    <string name="profile_photo_upload_unsuccesfull">Profil resminiz değiştirilemedi</string>
    <string name="content_uploading">İçerik yükleniyor</string>
    <string name="content_downloading">İndiriliyor</string>
    <string name="upload">Yükleme</string>
    <string name="download">İndirme</string>
    <string name="user_have_no_post">Vitae\'de hiç gönderin yok gibi duruyor. Hemen bir tane paylaşmaya ne dersin?</string>
    <string name="patient_have_no_post">hiç gönderi paylaşmamış gibi duruyor.</string>
    <string name="posts">Gönderiler</string>
    <string name="reviews">Değerlendirmeler</string>
    <string name="doctor_general_rating">Doktor Karnesi</string>
    <string name="no_blood_alarm_is_found">Yakınlarında hiç kan alarmı yok gibi görünüyor.</string>
    <string name="change_password">Şifre Değiştir</string>
    <string name="old_pasword">Eski Şifre</string>
    <string name="new_pasword">Yeni Şifre</string>
    <string name="new_pasword_again">Yeni Şifre(Tekrar)</string>
    <string name="password_change_succesfull">Şifreniz başarıyla değiştirildi</string>
    <string name="password_change_unsuccesfull">Şifreniz değiştirilemedi! Lütfen tekrar deneyin</string>
    <string name="enter_old_password_correctly">Lütfen eski şifrenizi doğru girin</string>
    <string name="new_passwords_arent_same">Yeni şifreler aynı değil, lütfen kontrol edin</string>
    <string name="new_password_cannot_null">Yeni şifre boş bırakılamaz</string>
    <string name="new_password_same_with_old">Yeni şifre eski şifrenizin aynısı, lütfen değiştirin</string>
    <string name="change_user_name">Kullanıcı Adı</string>
    <string name="change_user_id">Kullanıcı Id</string>
    <string name="change_mail">Mail</string>
    <string name="change_about_me">Hakkında</string>
    <string name="change">Değiştir</string>
    <string name="user_name_cannot_be_null">Lütfen kullanıcı adı olarak birşey girin.</string>
    <string name="user_id_cannot_be_null">Lütfen kullanıcı id olarak birşey girin.</string>
    <string name="user_id_exist">Girilen kullanıcı adı alınmış. Lütfen başka birşey deneyin.</string>
    <string name="mail_exist">Girilen mail başka bir kullanıcı tarafından kullnılıyor. Lütfen başka bir mail adresi deneyin.</string>
    <string name="mail_cannot_be_null">Lütfen mail olarak birşey girin.</string>
    <string name="user_name_change_succesfull">Kullanıcı adı başarıyla değiştirildi</string>
    <string name="user_name_change_unsuccesfull">Kullanıcı adı değiştirilemedi! Lütfen tekrar deneyin</string>
    <string name="mail_change_succesfull">Mailiniz başarıyla değiştirildi</string>
    <string name="mail_change_unsuccesfull">Mailiniz değiştirilemedi! Lütfen tekrar deneyin</string>
    <string name="user_id_change_succesfull">Kullanıcı id başarıyla değiştirildi</string>
    <string name="user_id_change_unsuccesfull">Kullanıcı id değiştirilemedi! Lütfen tekrar deneyin</string>
    <string name="about_me_change_succesfull">Hakkında kısmı başarıyla değiştirildi</string>
    <string name="about_me_change_unsuccesfull">Hakkında kısmı değiştirilemedi! Lütfen tekrar deneyin</string>
    <string name="blood_alarm_notification_preference">Kan alarmlarını almak istiyorum</string>
    <string name="similar_user_search">Benzer Kullanıcı Aramaları</string>
    <string name="similar_user_search_preference">Benzer kullanıcı arama sonuçlarında çıkmak istiyorum.</string>
    <string name="private_hospital">Özel Hastane</string>
    <string name="state_hospital">Devlet Hastanesi</string>
    <string name="hospital_doesnt_fount">Aradığın kritere uygun hastane bilgisi bulamadık.</string>
    <string name="user_doesnt_found">Aradığın kritere uygun kullanıcı bulamadık.</string>
    <string name="similar_user_doesnt_found">Aradığın kritere uygun sağlık geçmişi senle benzeşen bir kullanıcı bulamadık.</string>
    <string name="total_rating_count">Toplam Değerlendirme</string>
    <string name="overall_score">Ortalama</string>
    <string name="reviews_are_important">Değerlendirmen ile birçok kişiye yardımcı olabilirsin. İlk değerlendirmeyi eklemeye ne dersin? </string>
    <string name="empty_disease">Lütfen değerlendirmeniz için bir hastalık seçtiğinizden emin olun.</string>
    <string name="rate_is_succesful">Değerlendirmeniz başarıyla kaydedildi.</string>
    <string name="view_hospital_reviews">Hastane için yapılan kullanıcı değerlendirmelerine göz atabilirsin.</string>
    <string name="blood_alarm">Kan Alarmı</string>
    <string name="alarm_blood_type">Alarm Kan Grubu</string>
    <string name="optional">Tercihe Bağlı</string>
    <string name="contact_number">İletişim Numarası</string>
    <string name="alarm_level">Alarm Seviyesi</string>
    <string name="blood_alarm_has_created">Kan alarmı başarıyla oluşturuldu.</string>
</resources>