<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/main_layout"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_weight="12"
              android:background="@color/colorPrimaryDark"
              android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="29dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/patient_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_patient"/>

            <TextView
                android:id="@+id/patient_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/patient_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/patient"
                android:textColor="@color/white"
                android:textSize="16dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/doctor_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_doctor"/>

            <TextView
                android:id="@+id/doctor_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/doctor_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/doctor"
                android:textColor="@color/white"
                android:textSize="16dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/hospital_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_hospital"/>

            <TextView
                android:id="@+id/hospital_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hospital_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/hospital"
                android:textColor="@color/white"
                android:textSize="16dp"/>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:text="@string/tell_us_about_you"
        android:textColor="@color/white"
        android:textSize="16sp"/>

</LinearLayout>