<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/blood_alarm_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_blood_red"/>

        <TextView
            android:id="@+id/blood_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/blood_alarm_icon"
            android:layout_marginTop="5dp"
            android:text="@string/blood_alarm"
            android:textAlignment="center"
            android:textColor="@color/blood_alarm_color"
            android:textSize="18sp"/>

        <ViewFlipper
            android:id="@+id/view_flipper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/blood_alarm"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/blood_alarm"
                android:background="@color/blood_alarm_color">

                <TextView
                    android:id="@+id/alarm_blood_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/alarm_blood_type"
                    android:textColor="@color/brightText"
                    android:textSize="14sp"/>

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/blood_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/alarm_blood_type"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/hospital_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/blood_spinner"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/hospital"
                    android:textColor="@color/brightText"
                    android:textSize="14sp"/>

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/hospital_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/hospital_name"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/selected_hospital_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hospital_spinner"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/contact_number_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/selected_hospital_name"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/contact_number"
                    android:textColor="@color/brightText"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/contact_number"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/contact_number_text"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"
                    android:hint="@string/optional"
                    android:inputType="phone"
                    android:paddingLeft="10dp"
                    android:textColor="@color/darkText"
                    android:textColorHint="@color/secondaryDarkText"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/alarm_level_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/contact_number"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/alarm_level"
                    android:textColor="@color/brightText"
                    android:textSize="14sp"/>

                <com.xw.repo.BubbleSeekBar
                    android:id="@+id/alarm_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/alarm_level_text"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    app:bsb_auto_adjust_section_mark="true"
                    app:bsb_bubble_color="@color/disease_color_light"
                    app:bsb_bubble_text_color="@color/colorPrimaryDark"
                    app:bsb_max="0"
                    app:bsb_min="5"
                    app:bsb_progress="1"
                    app:bsb_second_track_color="@color/drug_color"
                    app:bsb_section_count="5"
                    app:bsb_section_text_position="below_section_mark"
                    app:bsb_show_progress_in_float="true"
                    app:bsb_show_section_mark="true"
                    app:bsb_show_section_text="true"
                    app:bsb_show_thumb_text="true"
                    app:bsb_track_color="@color/white"/>

                <TextView
                    android:id="@+id/create_blood_alarm"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/alarm_level"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/border_white"
                    android:padding="10dp"
                    android:text="@string/add"
                    android:textAlignment="center"
                    android:textColor="@color/blood_alarm_color"
                    android:textSize="16dp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/blood_alarm_color">

                <ImageView
                    android:id="@+id/check_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_check_white_48dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/check_icon"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/blood_alarm_has_created"/>
            </RelativeLayout>

        </ViewFlipper>


    </RelativeLayout>

</LinearLayout>