<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/main_layout"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_weight="12"
              android:background="@color/hospital_page_background"
              android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/professional_info"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/signup_roundwhite_without_bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:src="@drawable/ic_hospital_building_white_24dp"/>

                <TextView
                    android:id="@+id/txt_signup_hospital"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/hospital"
                    android:letterSpacing="0.1"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="13dp"/>

            </LinearLayout>

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/signUp_hospital_spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/signup_roundwhite_without_bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:src="@drawable/ic_stethoscope_white_18dp"/>

                <TextView
                    android:id="@+id/txt_signup_clinic"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/doctor_branch"
                    android:letterSpacing="0.1"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="13dp"/>

            </LinearLayout>

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/signUp_clinic_spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>

            <Button
                android:id="@+id/create_profile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_above="@+id/bottom"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/signup_round"
                android:gravity="center"
                android:text="@string/create_account"
                android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/description"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="8sp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/doctor_signup_description"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:textColor="#ffffff"
        android:textSize="16sp"/>

</LinearLayout>